<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_okname">确定</string>
    <string name="btn_opennew">打开新窗口</string>
    <string name="btn_openmsg">测试对话框</string>
    <string name="btn_opennews">新闻中心</string>
    <string name="alert">Alert</string>
    <string name="confirm">Confirm</string>
    <string name="info">Info</string>
    <string name="custom">Custom</string>
    <string name="bottom">Show at bottom of screen</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_countries">Loading countries&#8230;</string>
    <string name="start_demo">Start demo</string>
    <string name="title_activity_demo_menu">DemoMenu</string>
    <string name="PagingListView">测试PagingListView</string>
    <string name="ZRLListView">测试ZRLListView</string>
    <string name="Message">测试Message</string>
    <string name="AsyncTask">测试异步Task</string>
    <string name="newsTab">仿今日头条横向Tab菜单</string>
    <string name="Refresh">关闭Activity刷新前一个Activity</string>
    <string name="title_activity_zrl_listview_demo">ZrlListviewDemo</string>
    <string name="title_activity_refresh_demo">RefreshDemo</string>
    <string name="title_activity_refresh_demo2">RefreshDemo2</string>

</resources>