<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tvPagingListViewDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PagingListView" />
    
    <TextView
        android:id="@+id/tvZRLListViewDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ZRLListView" />
    

    <TextView
        android:id="@+id/tvMsgDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Message" />

    <TextView
        android:id="@+id/tvAsyncTaskDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AsyncTask" />

    <TextView
        android:id="@+id/tvnewsDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsTab" />
    
     <TextView
        android:id="@+id/tvRefreshDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Refresh" />

</LinearLayout>